opam-version: "2.0"
maintainer: "Dave Aitken <dave.aitken@gmail.com>"
authors: ["Dave Aitken <dave.aitken@gmail.com>"]
homepage: "https://github.com/actionshrimp/ppx_deriving_decoders"
bug-reports: "https://github.com/actionshrimp/ppx_deriving_decoders/issues"
dev-repo: "git+https://github.com/actionshrimp/ppx_deriving_decoders.git"
doc: "https://github.com/actionshrimp/ppx_deriving_decoders/README.md"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"           {>= "4.04.2" & < "4.08.0"}
  "dune"            {with-build & >= "1.9.1"}
  "ppxlib"          {>= "0.6.0"}
  "ppx_expect"      {with-test & >= "v0.12.0"}
  "ppx_inline_test" {with-test & >= "v0.12.0"}
  "decoders"        {>= "0.1.2"}
]
synopsis: "[@@deriving] plugin to generate decoders"
description: "
[@@deriving] plugin to generate decoders (https://github.com/mattjbray/ocaml-decoders)
"
